--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
       <% if current_user %>
         Signed in as <%= link_to current_user.username, user_path(current_user.id) %>. <%= link_to "Log out", session_path("current"), :method => :delete %>
       <% else %>
-        <%= link_to "Log in", new_session_path %> or <%= link_to "Sign up", new_user_path %>
+        <%= link_to "Log in", user_sessions_new_path %> or <%= link_to "Sign up", new_user_path %>
       <% end %>
     </p>
 
