--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,9 +9,9 @@
 <body>
   <p style="float:right;">
       <% if current_user %>
-        Signed in as <%= link_to current_user.username, user_path(current_user.id) %>. <%= link_to "Log out", session_path("current"), :method => :delete %>
+        Signed in as <%= link_to current_user.username, user_path(current_user.id) %>. <%= link_to "Log out", user_sessions_path("current"), :method => :delete %>
       <% else %>
-        <%= link_to "Log in", user_sessions_new_path %> or <%= link_to "Sign up", new_user_path %>
+        <%= link_to "Log in", new_user_session_path %> or <%= link_to "Sign up", new_user_path %>
       <% end %>
     </p>
 
