Created time_left method

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,8 +1,8 @@
 <h1> Our projects </h1>
 <% if current_user %>
-  <%= link_to "Create a project", "projects/new" %>
+  <%= link_to "Create a project", new_project_path %>
 <% end %>
-  
+
 <ul id="projects">
   <%= render @projects %>
 </ul>
