Adds calculations for contributions

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,6 +1,6 @@
 <h1>Project:</h1> <h2><%= @project.name %></h2>
 Description: <%= @project.description %><br/>
-Goal: <%= @project.goal %> <br/>
+<%= @project.funded %> <br/>
 Deadline: <%= @project.deadline %>
 
 <p>Time to deadline: <%= @project.time_left%></p>
