--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,26 +1,3 @@
 <h1>Create a new project</h1>
 
-<%= form_for @project do |f| %>
-  <p>
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
-  </p>
-
-  <p>
-    <%= f.label :description %><br />
-    <%= f.text_area :description %>
-  </p>
-
-  <p>
-    <%= f.label :goal %><br />
-    <%= f.text_field :goal %>
-  </p>
-
-  <p>
-    <%= f.label :deadline %><br />
-    <%= f.datetime_select :deadline %>
-  </p>
-
-  <%= f.submit "Save" %>
-
-<% end %>
+<%=render "form_project" %>
