--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,3 +4,4 @@
 <% @user.contributions.each do |c| %>
   <p>You contributed to the <%= link_to c.project.name, project_path(c.project_id) %> project in the amount of $<%= c.amount %>.</p>
 <% end %>
+<p> You have contributed a total of $<%= @user.amount_contributed %>.</p>
