Fixed flash msges

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,13 +15,13 @@
       <% end %>
     </p>
 
-      <% if flash[:notice] %>
-        <div id="notice" data-notice class="alert-box info radius"><%= flash[:notice] %></div>
-      <% end %>
-      <% if flash[:alert] %>
-        <div id="alert" data-alert class="alert-box warning radius"><%= flash[:alert] %></div>
-      <% end %>
-      
+    <% if flash[:notice] %>
+      <div style="text-align:center" id="notice" data-notice class="alert-box info radius"><%= flash[:notice] %></div>
+    <% end %>
+    <% if flash[:alert] %>
+      <div style="text-align:center"  id="alert" data-alert class="alert-box warning radius"><%= flash[:alert] %></div>
+    <% end %>
+</p>
 <%= yield %>
 
 </body>
