Added start_time to projects

--- a/app/views/projects/_form_project.html.erb
+++ b/app/views/projects/_form_project.html.erb
@@ -15,6 +15,11 @@
   </p>
 
   <p>
+    <%= f.label :start_time %><br />
+    <%= f.datetime_select :start_time %>
+  </p>
+
+  <p>
     <%= f.label :deadline %><br />
     <%= f.datetime_select :deadline %>
   </p>
