--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -1,5 +1,7 @@
+<% if project.started %>
 <li>
   <%= link_to project_path(project.id) do %><h2><%= project.name %></h2><% end %>
     Goal: $<%= project.goal %><br/>
     Deadline: <%= project.deadline %><br/>
 </li>
+<% end %>
