--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -8,6 +8,8 @@ Description: <%= @project.description %><br/>
 <%= @project.funded %> <br/>
 Deadline: <%= @project.deadline %>
 
+<p><%= link_to "View the creator's profile", user_path(@project.user_id) %></p>
+
 <p><%= @project.time_left%></p>
 <div style="width:80%">
   <div style="float:left"><h1>Current contributions!</h1>
