--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -17,6 +17,11 @@
      <%#= f.password_field :password_confirmation %>
   </div> -->
 
+  <div class="field">
+     <%= f.label :bio %><br />
+     <%= f.text_area :bio %>
+  </div>
+
     <div class="actions"><%= f.submit %></div>
 
 <% end %>
