--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,19 @@
-<h1>Hi, <%= @user.username %>!</h1>
 
-<h2> Your activity on Crowdfunder: </h2>
-<% @user.contributions.each do |c| %>
-  <p>You contributed to the <%= link_to c.project.name, project_path(c.project_id) %> project in the amount of $<%= c.amount %>.</p>
+<% if @user.validate_user(current_user) %>
+  <h1>Hi, <%= @user.username %>!</h1>
+
+  <h2> Your activity on Crowdfunder: </h2>
+  <% @user.contributions.each do |c| %>
+    <p>You contributed to the <%= link_to c.project.name, project_path(c.project_id) %> project in the amount of $<%= c.amount %>.</p>
+  <% end %>
+  <p> You have contributed a total of $<%= @user.amount_contributed %>.</p>
+
+  <p>You bio: <%= @user.bio %></p>
+
+<% else %>
+
+  <h1><%= @user.username %>!</h1>
+
+  <p><%= @user.bio %> </p>
+
 <% end %>
-<p> You have contributed a total of $<%= @user.amount_contributed %>.</p>
