--- a/app/views/projects/_form_project.html.erb
+++ b/app/views/projects/_form_project.html.erb
@@ -5,6 +5,10 @@
   </p>
 
   <p>
+    <%= f.label :category %><br />
+    <%= f.select :category_id, options_for_select(Category.all.map {|e| [e.name, e.id]}) %>
+  </p>
+  <p>
     <%= f.label :description %><br />
     <%= f.text_area :description %>
   </p>
