Adds pictures, password confirmation with some caveats about their use

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -12,10 +12,16 @@
      <%= f.label :password %><br />
      <%= f.password_field :password %>
   </div>
-  <!-- <div class="field">
-     <%#= f.label :password_confirmation %><br />
-     <%#= f.password_field :password_confirmation %>
-  </div> -->
+  <div class="field">
+     <%= f.label :password_confirmation %><br />
+     <%= f.password_field :password_confirmation %>
+  </div>
+
+  <div class="field">
+     <%= f.label :avatar %><br />
+     <%= f.file_field :avatar %>
+  </div> 
+
 
   <div class="field">
      <%= f.label :bio %><br />
