--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,6 +2,8 @@
 <% if @user.validate_user(current_user) %>
   <h1>Hi, <%= @user.username %>!</h1>
 
+  <img src=<%='#{ @user.avatar }' %>>
+
   <h2> Your activity on Crowdfunder: </h2>
   <% @user.contributions.each do |c| %>
     <p>You contributed to the <%= link_to c.project.name, project_path(c.project_id) %> project in the amount of $<%= c.amount %>.</p>
@@ -11,6 +13,8 @@
   <p>Your bio: <%= @user.bio %></p>
 
 <% else %>
+  
+  <img src=<%='#{ @user.avatar }' %>>
 
   <h1><%= @user.username %>!</h1>
 
