Adds pics on profile and projects pages

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,8 @@
 <% if @user.validate_user(current_user) %>
   <h1>Hi, <%= @user.username %>!</h1>
 
-  <img src=<%='#{ @user.avatar }' %>>
+  <!-- <img_tag src=<%#="#{ @user.avatar }" %>> -->
+  <%= image_tag(@user.avatar, :class => "bio_pic") %>
 
   <h2> Your activity on Crowdfunder: </h2>
   <% @user.contributions.each do |c| %>
