--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,6 +1,6 @@
 <h1>Project:</h1> <h2><%= @project.name %></h2>
 
-<% if @project.validate_owner(current_user) %>
+<% if current_user && @project.validate_owner(current_user) %>
 <p><small><%= link_to "Edit this project", edit_project_path %></small></p>
 <% end %>
 
