--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -14,6 +14,7 @@ Deadline: <%= @project.deadline %>
 <p><%= link_to "View the creator's profile", user_path(@project.user_id) %></p>
 
 <p><%= @project.time_left%></p>
+<% unless @project.time_left == "This project is now closed." %>
 <div style="width:80%">
   <div style="float:left"><h1>Current contributions!</h1>
     <ul>
@@ -60,4 +61,5 @@ Deadline: <%= @project.deadline %>
       <% end %>
    </div>
  </div>
+ <% end %>
 
