Fixed display text for recent fully funded projects

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -21,7 +21,7 @@
 
 <ul id="fully_funded_projects">
   <h1>Fully funded projects (<%= count %>)</h1> 
-  <h2>Most recent fully funded projects:</h2> 
+  <h2>Recent fully funded projects:</h2> 
   <% counter = 0 %>
   <% @projects.each do |p| %>
   <% if p.fully_funded %>
