--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -2,6 +2,9 @@
 
 <% if current_user && @project.validate_owner(current_user) %>
 <p><small><%= link_to "Edit this project", edit_project_path %></small></p>
+  <% if @sum != 0 %>
+  <p><%= link_to "Delete this project", @project, :confirm => "Are you sure you want to delete this project?", :method => :delete %></p>
+  <% end %>
 <% end %>
 
 Description: <%= @project.description %><br/>
