--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,28 +1,52 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title>Crowdfunder</title>
-  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
-  <p style="float:right;">
-      <% if current_user %>
-        Signed in as <%= link_to current_user.username, user_path(current_user.id) %>. <%= link_to "Log out", user_session_path("current"), :method => :delete %>
-      <% else %>
-        <%= link_to "Log in", new_user_session_path %> or <%= link_to "Sign up", new_user_path %>
-      <% end %>
-    </p>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <% if flash[:notice] %>
-      <div style="text-align:center" id="notice" data-notice class="alert-box info radius"><%= flash[:notice] %></div>
-    <% end %>
-    <% if flash[:alert] %>
-      <div style="text-align:center"  id="alert" data-alert class="alert-box warning radius"><%= flash[:alert] %></div>
-    <% end %>
-</p>
-<%= yield %>
+    <title><%= content_for?(:title) ? yield(:title) : "foundation-rails" %></title>
 
-</body>
+    <%= stylesheet_link_tag    "application" %>
+    <%= javascript_include_tag "vendor/modernizr" %>
+    <%= csrf_meta_tags %>
+  </head>
+
+  <body>
+    <nav class="top-bar" data-topbar>
+      <ul class="title-area">
+        <li class="name">
+          <h1><%= link_to "CrowdFunda", root_url %></h1>
+        </li>
+      </ul>
+      <section class="top-bar-section">
+        <!-- Right Nav Section -->
+        <ul class="right">
+          <% if current_user %>
+            <li class="active"><%= link_to current_user.username, user_path(current_user.id) %></li>
+            <li><%= link_to "Log out", user_session_path("current"), :method => :delete %></li>
+          <% else %>
+            <li class="active"><%= link_to "Log in", new_user_session_path %></li>
+            <li><%= link_to "Sign up", new_user_path %></li>
+          <% end %>
+        </ul>
+
+          <% if current_user %>
+            <ul class="left">
+              <li><%= link_to "Create a project", new_project_path %></li>
+            </ul>
+          <% end %>
+
+            </section>
+          </nav>
+
+              <% if flash[:notice] %>
+                <div style="text-align:center" id="notice" data-notice class="alert-box info radius"><%= flash[:notice] %></div>
+              <% end %>
+              <% if flash[:alert] %>
+                <div style="text-align:center"  id="alert" data-alert class="alert-box warning radius"><%= flash[:alert] %></div>
+              <% end %>
+          </p>
+    <%= yield %>
+    <%= javascript_include_tag "application" %>
+  </body>
 </html>
