--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -11,7 +11,12 @@
 
 
 Description: <%= @project.description %><br/>
-<%= @project.funded %> <br/>
+<div class="progress">
+  <span class="meter" style="width:<%= @project.funded %>% "> </span>
+</div>
+
+
+ <br/>
 Deadline: <%= @project.deadline %>
 
 <p><%= link_to image_tag(@owner.avatar, :class => "bio_pic"), user_path(@project.user_id) %></p>
