--- a/app/views/projects/_form_project.html.erb
+++ b/app/views/projects/_form_project.html.erb
@@ -18,6 +18,8 @@
     <%= f.text_field :goal %>
   </p>
 
+  <%= f.file_field :image %>
+
   <p>
     <%= f.label :start_time %><br />
     <%= f.datetime_select :start_time %>
